--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
 					<ul class="icons">
 						<li><a href="https://www.linkedin.com/in/ayari-wissem/" class="icon brands fa-linkedin"><span class="label">LinkedIn</span></a></li>
 					   <li><a href="https://AyariWissem.github.io" class="icon brands fa-github"><span class="label">Github</span></a></li>
+					   <li><a href="mailto:wissemAyari96@gmail.com" class="icon solid fa-envelope"><span class="label">Email</span></a></li>  
 					   <br><li><Strong>wissemAyari96@gmail.com</Strong></li>
 				   </ul>
 
