Added the href to the test automation project

--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
 							</article>
 
 							<article class="col-6 col-12-xsmall work-item">
-								<a href="#" class="image fit thumb"><img src="images/fulls/testAutomation.png" alt="Test Automation Framework" /></a>
+								<a href="https://github.com/AyariWissem/Test-Automation-Framework" class="image fit thumb"><img src="images/fulls/testAutomation.png" alt="Test Automation Framework" /></a>
 								<h3>Test Automation framework from scratch</h3>
 								<p><a href="https://github.com/AyariWissem/Test-Automation-Framework">View Code</a><br>Selenium, Appium, Jenkins, Complete Test framework from scratch.</p>
 							</article>
