--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 						<header class="major">
 							<h2>About Me</h2>
 						</header>
-						<p>I am Ayari Wissem, An Embedded Systems Engineer, I have done many projects and internships most notably at STMicroelectrnoics,
+						<p>I am Ayari Wissem, An Embedded Systems Engineer, I have done many projects and internships most notably at STMicroelectronics,
 							One of the world’s largest semiconductor companies in the world!
 							<br>I am passionate about electronics and development in general, and have made projects with ranging from low level embedded 
 							systems (PICs,STM32) and IOT applications using the Raspberry PI 3 B+, to setting up different automation scripts and full 
